// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RippleStoryshots Organisms/CampaignSecondary With image 1`] = `
<div
  class="rpl-campaign-secondary"
>
  <div
    class="rpl-campaign-secondary__row"
  >
    <div
      class="rpl-campaign-secondary__left"
    >
      <div
        class="rpl-campaign-secondary__content"
      >
        <img
          alt=""
          class="rpl-campaign-secondary__image"
          src="http://placehold.it/699x411"
        />

        <!---->
      </div>
    </div>

    <div
      class="rpl-campaign-secondary__right"
    >
      <div
        class="rpl-campaign-secondary__content"
      >
        <h2
          class="rpl-campaign-secondary__title"
        >
          Secondary campaign headline
        </h2>

        <div
          class="rpl-campaign-secondary__summary"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod temporar incident  incididunt ut labore et dolore magna aliqua. Ut enim ad minim niam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
        </div>
      </div>

      <a
        class="rpl-link rpl-button rpl-button--primary"
        data-print-url="#"
        href="#"
      >
        <span
          class="rpl-link__inner"
        >
          Call to action
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`RippleStoryshots Organisms/CampaignSecondary With video 1`] = `
<div
  class="rpl-campaign-secondary"
>
  <div
    class="rpl-campaign-secondary__row"
  >
    <div
      class="rpl-campaign-secondary__left"
    >
      <div
        class="rpl-campaign-secondary__content"
      >
        <!---->

        <div
          class="rpl-embedded-video rpl-campaign-secondary__video"
        >
          <div
            class="rpl-embedded-video-iframe-container"
          >
            <iframe
              allowfullscreen="allowfullscreen"
              class="rpl-embedded-video-frame"
              src="https://www.youtube.com/embed/bSlnfyGTiss"
            />
          </div>

          <div
            class="rpl-embed-video__link"
          >
            <!---->

            <a
              class="rpl-link rpl-text-link"
              data-print-url="#"
              href="#"
            >
              <span
                class="rpl-link__inner"
              >
                <span
                  class="rpl-text-label"
                >
                  <span>
                    View transcript
                  </span>
                </span>
              </span>
            </a>
          </div>

          <!---->
        </div>
      </div>
    </div>

    <div
      class="rpl-campaign-secondary__right"
    >
      <div
        class="rpl-campaign-secondary__content"
      >
        <h2
          class="rpl-campaign-secondary__title"
        >
          Secondary campaign headline
        </h2>

        <div
          class="rpl-campaign-secondary__summary"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod temporar incident  incididunt ut labore et dolore magna aliqua. Ut enim ad minim niam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
        </div>
      </div>

      <a
        class="rpl-link rpl-button rpl-button--primary"
        data-print-url="#"
        href="#"
      >
        <span
          class="rpl-link__inner"
        >
          Call to action
        </span>
      </a>
    </div>
  </div>
</div>
`;
